<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="bandeiras_array">        
        <item >VISA</item>
        <item >MASTERCARD</item>
        <item>AMEX</item>
        <item>ELO</item>
        <item>DINERS</item>
        <item>DISCOVER</item>
        <item>AURA</item>
       
    </string-array>
    
    <string-array name="parcelas_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    
    <string-array name="tipo_transacao_array">
        <item>Crédito à vista</item>
        <item>Crédito parc. loja</item>
        <item>Crédito parc. adm.</item>
    </string-array>
    
    <string name="app_name">CAP2all</string>
    <string name="action_settings">Configurações</string>
    <string name="action_refresh">Atualizar</string>
     <string name="action_logout">Logout</string>
    <string name="valorTransacao">Valor</string>
    <string name="nomeUsuario">Usuário</string>
    <string name="senhaUsuario">Senha</string>
    <string name="salvar">Salvar</string>
    <string name="insira_credenciais">Insira suas credenciais</string>
    <string name="bandeira">Bandeira</string>
    <string name="tipoTransacao">Tipo de transação</string>
    <string name="qtdeParcelas">Parcelas</string>
    <string name="cvv">CVV</string>
    <string name="vender">Vender</string>
    <string name="pedido">Pedido</string>
    <string name="tid">Id da transação</string>
    <string name="autorizacao">Autorização</string>
    <string name="atencao">    Atenção</string>
    <string name="battery_low">Bateria baixa.</string>
    <string name="battery_critically_low">Bateria muito baixa. Recarregue o leitor.</string>
	<string name="no_device_detected">Leitor não encontrado</string>	
	<string name="device_plugged">Leitor conectado</string>
	<string name="device_unplugged">Leitor desconectado</string>
	<string name="waiting_for_user">Aguardando ação do usuário...</string>
	<string name="check_internet">"Erro ao realizar a transação. Verifique a internet e tente novamente."</string>
	<string name="invalid_response">"Resposta inválida recebida do GATE2all. Tente novamente."</string>
	<string name="invalid_response_sale">"Resposta inválida recebida do GATE2all. Verifique o status desta transação no relatório antes de tentar novamente."</string>
	<string name="invalid_credentials">Credenciais inválidas. Preencha suas credenciais primeiro.</string>
	<string name="invalid_data">Dados inválidos ou incompletos</string>
	<string name="fill_form">Preencha corretamente o formulário.</string>
	 
	
	
	<string name="waiting_for_card">Por favor, passe o cartão agora.</string>
<string name="no_card_detected">Não foi possível ler o cartão. Tente novamente.</string>
<string name="icc_card_inserted">Cartão inserido. Neste momento não é possível realizar transações EMV.</string>
<string name="card_inserted">Card Inserted (Not ICC)</string>
<string name="bad_swipe">Erro de leitura. Tente novamente.</string>
<string name="card_swiped">Card Swiped: </string>
<string name="mag_head_fail">Magnetic head fail</string>
<string name="card_no_response">Não houve resposta. Verifique o cartão.</string>
<string name="card_swiped_track2_only">Card Swiped (Track 2 only):\n</string>
<string name="nfc_track2">Card Tapped (Track 2 Emulation):\n</string>
<string name="format_id">Format ID: </string>
<string name="masked_pan">Masked PAN: </string>
<string name="expiry_date">Expiry Date: </string>
<string name="cardholder_name">Cardholder Name: </string>
<string name="ksn">KSN: </string>
<string name="pin_ksn">PIN KSN:</string>
<string name="track_ksn">Track KSN:</string>
<string name="emv_ksn">EMV KSN:</string>
<string name="uid">UID:</string>
<string name="service_code">Service Code: </string>
<string name="track_1_length">Track 1 Length: </string>
<string name="track_2_length">Track 2 Length: </string>
<string name="track_3_length">Track 3 Length: </string>
<string name="encrypted_tracks">Encrypted Tracks: </string>
<string name="encrypted_track_1">Encrypted Track 1: </string>
<string name="encrypted_track_2">Encrypted Track 2: </string>
<string name="encrypted_track_3">Encrypted Track 3: </string>
<string name="partial_track">Partial Track: </string>
<string name="card_data">Card Data: </string>
<string name="start_emv_fail">Start EMV failed</string>
<string name="start_emv_success">Start EMV success</string>
<string name="app_version">Versão do APP: </string>
<string name="bootloader_version">Bootloader Version: </string>
<string name="firmware_version">Firmware Version: </string>
<string name="usb">USB: </string>
<string name="charge">Charge: </string>
<string name="battery_level">Battery Level: </string>
<string name="hardware_version">Hardware Version: </string>
<string name="supported_track">Supported Track: </string>
<string name="track_1_supported">Track 1 Supported: </string>
<string name="track_2_supported">Track 2 Supported: </string>
<string name="track_3_supported">Track 3 Supported: </string>
<string name="unknown">Unknown</string>
<string name="set_amount">Set Amount</string>
<string name="enter_pin">Please enter PIN</string>
<string name="online_process_requested">Online process requested.</string>
<string name="request_data_to_server">Complete os dados da venda</string>
<string name="replied_connected">Replied connected.</string>
<string name="replied_success">Replied success.</string>
<string name="replied_failed">Replied failed.</string>
<string name="batch_data">Batch Data:\n</string>
<string name="transaction_log">Transaction Log:\n</string>
<string name="reversal_data">Reversal Data:\n</string>
<string name="please_select_app">Please select app</string>
<string name="transaction_result">Transaction Result</string>
<string name="transaction_approved">Approved</string>
<string name="transaction_terminated">Terminated</string>
<string name="transaction_declined">Declined</string>
<string name="transaction_cancel">Cancelar</string>
<string name="transaction_search">Pesquidar</string>
<string name="transaction_capk_fail">Fail (CAPK fail)</string>
<string name="transaction_not_icc">Fail (Not ICC card)</string>
<string name="transaction_app_fail">Fail (App fail)</string>
<string name="transaction_device_error">Erro no leitor</string>
<string name="sem_conexao">Sem conexão com a internet</string>
<string name="primeira_pag_list_trans">Pagina inicial das transações</string>
<string name="tlv_list">TLV List:\n</string>
<string name="advice_process">Advice Process.</string>
<string name="call_your_bank">Please call your bank</string>
<string name="request_terminal_time">Request Terminal Time. Replied </string>
<string name="confirm_amount">Confirm amount</string> 
<string name="amount">Amount</string>
<string name="amount_ok">Amount OK?</string>
<string name="approved">Approved</string>
<string name="cancel_or_enter">Cancel or Enter</string>
<string name="card_error">Card error</string>
<string name="declined">Declined</string>
<string name="enter_amount">Please enter amount</string>
<string name="incorrect_pin">Incorrect PIN</string>
<string name="insert_card">Please insert card</string>
<string name="not_accepted">Not accepted</string>
<string name="pin_ok">PIN OK</string>
<string name="wait">Please wait&#8230;</string>
<string name="processing_error">Processing error</string>
<string name="remove_card">Please remove card</string>
<string name="use_chip_reader">Please use chip reader</string>
<string name="use_mag_stripe">Please use mag stripe</string>
<string name="try_again">Please try again</string>
<string name="refer_payment_device">Please refer to your payment device</string>
<string name="try_another_interface">Please try another interface</string>
<string name="online_required">Online required</string>
<string name="processing">Processing&#8230;</string>
<string name="welcome">Welcome</string>
<string name="present_one_card">Please present only one card</string>
<string name="capk_failed">CAPK loading failed</string>
<string name="last_pin_try">Last PIN try</string>
<string name="command_not_available">Command not available</string>
<string name="device_no_response">Sem resposta do leitor.</string>
<string name="device_reset">Reset do leitor.</string>
<string name="unknown_error">Erro desconhecido.</string>
<string name="device_busy">Leitor ocupado.</string>
<string name="out_of_range">Input out of range.</string>
<string name="invalid_format">Input invalid format.</string>
<string name="zero_values">Input are zero values.</string>
<string name="input_invalid">Input invalid.</string>
<string name="cashback_not_supported">Cashback not supported.</string>
<string name="crc_error">CRC Error.</string>
<string name="comm_error">Communication Error.</string>
<string name="device_off">Leitor desligado.</string>
<string name="get_info">Get Device Info</string>
<string name="clear_log">Clear Log</string>
<string name="check_card">Start</string>
<string name="start_emv">Start EMV</string>
<string name="cancel">Cancel</string>
<string name="pin">PIN</string>
<string name="cashback_amount">Cashback</string>
<string name="confirm">Confirm</string>
<string name="bypass">Bypass</string>
<string name="decline">Decline</string>
<string name="getting_info">Getting device info&#8230;</string>
<string name="starting">Iniciando leitor&#8230;</string>
<string name="power_on_icc">Power on ICC</string>
<string name="power_off_icc">Power off ICC</string>
<string name="send_apdu">Send APDU</string>
<string name="power_on_icc_success">Power on ICC Success</string>
<string name="power_on_icc_failed">Power on ICC Failed</string>
<string name="power_off_icc_success">Power off ICC Success</string>
<string name="power_off_icc_failed">Power off ICC Failed</string>
<string name="apdu_result">APDU Result:</string>
<string name="atr">ATR:</string>
<string name="apdu_failed">APDU Failed</string>
<string name="sending">Sending:</string>
<string name="atr_length">ATR Length:</string>
<string name="get_ksn">Get KSN</string>
<string name="getting_ksn">Getting KSN&#8230;</string>
<string name="powering_on_icc">Powering on ICC&#8230;</string>
<string name="powering_off_icc">Powering off ICC&#8230;</string>
<string name="card_not_supported">Card not support</string>
<string name="missing_mandatory_data">Missing mandatory data</string>
<string name="card_blocked_or_no_evm_apps">Card blocked or no EMV apps</string>
<string name="invalid_icc_data">Invalid ICC data</string>
<string name="power_on_nfc">Power on NFC</string>
<string name="power_off_nfc">Power off NFC</string>
<string name="data_exchange">Data exchange</string>
<string name="power_on_nfc_success">Power on NFC Success</string>
<string name="power_on_nfc_failed">Power on NFC Failed</string>
<string name="power_off_nfc_success">Power off NFC Success</string>
<string name="power_off_nfc_failed">Power off NFC Failed</string>
<string name="data_received">Data received:</string>
<string name="data_length">Data length:</string>
<string name="data_exchange_failed">Data exchange failed</string>
<string name="response">Response:</string>
	
    




</resources>
