<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@drawable/config"
        android:title="@string/action_settings"/>

    <item
        android:id="@+id/action_refresh"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@drawable/refresh"
        android:title="@string/action_refresh"/>
    
     <item
        android:id="@+id/action_logount"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:icon="@drawable/logout"
        android:title="@string/action_logout"
        android:background="@android:color/transparent"/>
</menu>
